--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li class="nav-info ms-3 mb-3 fs-3">Contact</li>
             </ul>
         </nav>
-        <div class="open-side-bar position-absolute bottom-50 ms-2 text-white toggel">☰ open</div>
+        <div class="open-side-bar position-absolute ms-2 text-white toggel">☰ open</div>
         <div class="div-header">
             <div class="bg-header w-100 h-100 d-flex flex-column justify-content-center align-items-center">
                 <h2 class="text-center text-white">Egyption Party</h2>
