--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Egyptian Party</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="image/eventfavicon-5-logo-trademark.jpg" type="image/x-icon">
-    <title>Egyptian Party</title>
     <link rel="stylesheet" href="css/stayle.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -37,7 +38,7 @@
         <div class="open-side-bar position-absolute ms-2 text-white toggel">☰ open</div>
         <div class="div-header">
             <div
-                class="bg-header w-100 h-100 d-flex flex-column justify-content-center align-items-center overflow-hidden  ">
+                class="bg-header w-100 h-100 d-flex flex-column justify-content-center align-items-center overflow-hidden">
                 <h2 class="text-center text-white">Egyption Party</h2>
                 <p class="text-center text-white">Let's have Fun</p>
             </div>
