--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="container-one m-5">
                     <section class="singer mx-auto">
                         <header class="singer-name name-one text-white p-3 text-center">Singer one</header>
-                        <p class="singer-about about-one mb-0 p-3 text-center">"Lorem ipsum dolor sit amet, consectetur
+                        <p class="singer-about about-one mb-0 text-center">"Lorem ipsum dolor sit amet, consectetur
                             adipiscing
                             elit,
                             sed do eiusmod tempor incididunt ut
@@ -62,7 +62,7 @@
                     </section>
                     <section class="singer mx-auto">
                         <header class="singer-name name-two text-white p-3 text-center">Singer two</header>
-                        <p class="singer-about about-two mb-0 p-3 text-center">"Sed ut perspiciatis unde omnis iste
+                        <p class="singer-about about-two mb-0 text-center">"Sed ut perspiciatis unde omnis iste
                             natus error
                             sit
                             voluptatem accusantium doloremque
@@ -84,7 +84,7 @@
                     </section>
                     <section class="singer mx-auto">
                         <header class="singer-name name-three text-white p-3 text-center">Singer three</header>
-                        <p class="singer-about about-three mb-0 p-3 text-center">"But I must explain to you how all this
+                        <p class="singer-about about-three mb-0 text-center">"But I must explain to you how all this
                             mistaken
                             idea of
                             denouncing pleasure and praising pain
@@ -107,7 +107,7 @@
                     </section>
                     <section class="singer mx-auto">
                         <header class="singer-name name-four text-white p-3 text-center">Singer four</header>
-                        <p class="singer-about about-four mb-0 p-3 text-center">"At vero eos et accusamus et iusto odio
+                        <p class="singer-about about-four mb-0 text-center">"At vero eos et accusamus et iusto odio
                             dignissimos
                             ducimus
                             qui blanditiis praesentium voluptatum
