--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main>
         <section id="section-one">
             <div class="container">
-                <div class="container-one m-5">
+                <div class="container-one m-lg-5 my-5 mx-auto">
                     <section class="singer mx-auto">
                         <header class="singer-name name-one text-white p-3 text-center">Singer one</header>
                         <p class="singer-about about-one mb-0 text-center">"Lorem ipsum dolor sit amet, consectetur
