update counter section

--- a/index.html
+++ b/index.html
@@ -210,8 +210,9 @@
                                 <span id="counter" class="text-danger me-2 fw-bold"></span>
                                 <span>Character Reamining</span>
                             </div>
-                            <button class="btn btn-danger d-flex justify-content-center align-items-center">SEND
+                            <button class="send-btn btn btn-danger d-flex justify-content-center align-items-center">SEND
                                 MESSAGE</button>
+                            <button class="enable-btn d-none btn btn-dark d-flex justify-content-center align-items-center">press to complete</button>
                         </div>
                     </div>
                 </section>
